# Trabajo-Integrador---POO---2024

./: .gitignore  from xmlrpc.py  iteracion2Informe.docx  netstat.bat  ordenes_ejecutadas.json  ordenes_ejecutadas.txt  ordenes_solicitadas.json  ordenes_solicitadas.txt  ~$eracion2Informe.docx
QUIROGA_13889_TP4/: archivoAutomatico.txt  configuracion_robot.json
QUIROGA_13889_TP4/clienteJuancho/: Cliente.cpp  Cliente.h  Interfaz.cpp  Interfaz.h  main_cliente.cpp
QUIROGA_13889_TP4/librerias/: XmlRpcSocket.cpp
QUIROGA_13889_TP4/servidor/: ControladorRobot.py  InterfazConsola.py  (+5 more)
anexos/: iteracion2Informe.docx
cliente_files/: ActivarEfectorCommand.cpp  ActivarEfectorCommand.h  CMakeLists.txt  Cliente.cpp  Cliente.h  Command.h  FileManager.cpp  FileManager.h  MainMenu.cpp  MainMenu.h  MoveEfectorCommand.cpp  MoveEfectorCommand.h  Orden.cpp  Orden.h
cliente_files/XMLRPC++/: XMLRPC++.vcxproj  XMLRPC++.vcxproj.filters  XmlRpcServerConnection.cpp
cliente_files/XMLRPC++/XMLRPC++/x64/Debug/: vc143.idb
cliente_files/XMLRPC++/x64/Debug/XMLRPC++.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  XMLRPC++.lastbuildstate
cliente_files/XMLRPC++/x64/Release/XMLRPC++.tlog/: CL.command.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  XMLRPC++.lastbuildstate
com/: cliente.cpp  server.py
servidor/: GestorDeArchivos.py  ManejadorErrores.py  ServidorControl.py  log_trabajo.csv  main.py
testMati/: cliente.py  servidor.py
ti_servidor/: interfazServidor.py  main.py  main2.py  parametros.py
(+155 files in other folders)
